# pylings

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
commands/: __init__.py  add.py  init.py  ls.py  reset.py  start.py  version.py
exercises/basics/: basics_001.py
solutions/basics/: basics_001.py
tests/basics/: basics_001.py
tests/utils/: __init__.py  construct_test.py  error_handling_test.py  output_test.py  test_base.py  variable_test.py
utils/: constants.py  monitor.py
utils/db/: __init__.py  db_manager.py  exercise_manager.py  progress_manager.py  solution_manager.py  status_enum.py
utils/template/: __init__.py  exercise_template.py  solution_template.py  test_template.py
