[project]
name = "pylings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sshkeyboard>=2.3.1",
    "toml>=0.10.2",
    "typer>=0.15.1",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"


[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.9.2",
]
